[gd_scene load_steps=13 format=3 uid="uid://cgox167shdv31"]

[ext_resource type="Material" uid="uid://cyijkjkcjpo71" path="res://addons/kenney_prototype_tools/materials/dark/material_05.tres" id="1_dbpa8"]
[ext_resource type="Script" path="res://objects/robot/virtual_robot.gd" id="1_hafm7"]
[ext_resource type="Script" path="res://objects/robot/robot.gd" id="1_n667e"]
[ext_resource type="Material" uid="uid://dn16yhnqtqh7i" path="res://addons/kenney_prototype_tools/materials/orange/material_02.tres" id="2_s0tog"]
[ext_resource type="Texture2D" uid="uid://dcctv40rba8hj" path="res://addons/kenney_prototype_tools/textures/dark/texture_05.png" id="4_upx54"]
[ext_resource type="Texture2D" uid="uid://bf3ywp0eda70m" path="res://addons/kenney_prototype_tools/textures/orange/texture_02.png" id="5_hxg5o"]

[sub_resource type="CylinderMesh" id="CylinderMesh_qypgi"]
top_radius = 0.135
bottom_radius = 0.135
height = 0.14

[sub_resource type="PrismMesh" id="PrismMesh_11p1s"]
size = Vector3(0.1, 0.1, 0.019)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2b3li"]
margin = 0.1
height = 0.14
radius = 0.135

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pfnxd"]
transparency = 1
vertex_color_is_srgb = true
albedo_color = Color(1, 1, 1, 0.596078)
albedo_texture = ExtResource("4_upx54")
albedo_texture_force_srgb = true
uv1_triplanar = true
texture_filter = 5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_snmxf"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gwu5w"]
transparency = 1
vertex_color_is_srgb = true
albedo_color = Color(1, 1, 1, 0.478431)
albedo_texture = ExtResource("5_hxg5o")
uv1_triplanar = true
uv1_world_triplanar = true
texture_filter = 5

[node name="Robot" type="Node3D"]
script = ExtResource("1_n667e")

[node name="VirtualRobot" type="CharacterBody3D" parent="."]
script = ExtResource("1_hafm7")

[node name="BodyMesh" type="MeshInstance3D" parent="VirtualRobot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.07, 0)
material_override = ExtResource("1_dbpa8")
mesh = SubResource("CylinderMesh_qypgi")

[node name="DirectionMesh" type="MeshInstance3D" parent="VirtualRobot"]
transform = Transform3D(-1, -8.74228e-08, -3.82137e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 0, 0.148, 0.085)
material_override = ExtResource("2_s0tog")
mesh = SubResource("PrismMesh_11p1s")

[node name="CollisionShape3D" type="CollisionShape3D" parent="VirtualRobot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.07, 0)
shape = SubResource("CylinderShape3D_2b3li")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="VirtualRobot"]
process_priority = 1
path_desired_distance = 0.1
target_desired_distance = 0.1
path_max_distance = 0.21
avoidance_enabled = true
radius = 0.1
neighbor_distance = 0.5
time_horizon = 0.01
max_speed = 1.0
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(0.415686, 0.529412, 1, 1)
debug_path_custom_point_size = 8.0

[node name="NavTimer" type="Timer" parent="VirtualRobot"]
wait_time = 0.05
autostart = true

[node name="VirtualPose" type="Label" parent="VirtualRobot"]
offset_left = 210.415
offset_top = 4.0
offset_right = 384.415
offset_bottom = 30.0

[node name="Ghost" type="Node3D" parent="."]

[node name="BodyMesh" type="MeshInstance3D" parent="Ghost"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.07, 0)
material_override = SubResource("StandardMaterial3D_pfnxd")
mesh = SubResource("CylinderMesh_qypgi")
surface_material_override/0 = SubResource("StandardMaterial3D_snmxf")

[node name="DirectionMesh" type="MeshInstance3D" parent="Ghost"]
transform = Transform3D(-1, -8.74228e-08, -3.82137e-15, 0, -4.37114e-08, 1, -8.74228e-08, 1, 4.37114e-08, 0, 0.148, 0.085)
material_override = SubResource("StandardMaterial3D_gwu5w")
mesh = SubResource("PrismMesh_11p1s")

[node name="RealPose" type="Label" parent="."]
offset_left = 810.552
offset_top = 4.92635
offset_right = 973.552
offset_bottom = 21.9263

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1, 1.2)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "RESET POSE"

[node name="ResetObstacle" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "RESET OBSTACLES"

[connection signal="velocity_computed" from="VirtualRobot/NavigationAgent3D" to="VirtualRobot" method="_on_navigation_agent_3d_velocity_computed" flags=18]
[connection signal="timeout" from="VirtualRobot/NavTimer" to="VirtualRobot" method="_on_nav_timer_timeout" flags=18]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="VirtualRobot" method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ResetObstacle" to="." method="_on_reset_obstacle_pressed"]
